# ODmovieindexer

./: .gitignore  README.rst  Reddit - Opendirectory scraper.ipynb  main.py  pyproject.toml
urls/: http___dl.mcup.xyz_.txt  https___easy-movie.com.au_cdn_.txt
