[tool.poetry]
name = "opendirectorymovieratingbot"
version = "0.1.0"
description = ""
authors = ["Mathieu <laundro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.3"
notebook = "^6.1.4"
furl = "^2.1.0"
marshmallow = "^3.9.1"
arrow = "^0.17.0"
typesense = "^0.9.0"
loguru = "^0.5.3"
guessit = "^3.1.1"
num2words = "^0.5.10"
requests-credssp = "^1.2.0"
pypsrp = {extras = ["credssp"], version = "^0.5.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
